--- a/.github/workflows/staging-build-and-publish.yml
+++ b/.github/workflows/staging-build-and-publish.yml
@@ -1,11 +1,12 @@
-name: Automated Site Deployment
+name: Automated Staging Site Deployment
 
 on:
   pull_request:
     branches:
-      - main
+      - staging
     types:
       - closed
+    on: workflow_dispatch
 
 jobs:
   build-and-push-docker-image:
@@ -34,8 +35,8 @@ jobs:
           file: ./src/Dockerfile.prod
           push: true
           tags: |
-            ghcr.io/sethangell/townsley_comic:latest
-            ghcr.io/sethangell/townsley_comic:${{ vars.MAJOR_VERSION }}.${{ vars.MINOR_VERSION }}
+            ghcr.io/sethangell/townsley_comic-staging:latest
+            ghcr.io/sethangell/townsley_comic-staging:${{ vars.MAJOR_VERSION }}.${{ vars.MINOR_VERSION }}
 
       - name: Autoincrement a new patch version
         run: |
@@ -64,7 +65,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          script: (cd /home/TownsleyComic && docker-compose down)
+          script: (cd /home/townsley/staging/ && docker-compose down)
 
   download-updated-docker-compose:
     needs: shut-down-current-version
@@ -77,28 +78,10 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          script: curl -o /home/TownsleyComic/docker-compose.yml https://raw.githubusercontent.com/SethAngell/TownsleyComic/main/.ci/docker-compose.yml
-
-  download-updated-build-script:
-    needs: shut-down-current-version
-    runs-on: ubuntu-latest
-    steps:
-      - name: Retrieving up to date build.sh
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.SSH_PASSWORD }}
-          port: ${{ secrets.SSH_PORT }}
-          script: curl -o /home/TownsleyComic/build.sh https://raw.githubusercontent.com/SethAngell/TownsleyComic/main/.ci/build.sh
+          script: curl -o /home/townsley/staging/docker-compose.yml https://raw.githubusercontent.com/SethAngell/TownsleyComic/staging/docker-compose.yml
 
   spin-up-new-version-of-the-compound:
-    needs:
-      [
-        shut-down-current-version,
-        download-updated-docker-compose,
-        download-updated-build-script,
-      ]
+    needs: [shut-down-current-version, download-updated-docker-compose]
     if: always()
     runs-on: ubuntu-latest
     steps:
@@ -109,7 +92,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          script: (cd /home/TownsleyComic && source ./build.sh)
+          script: (cd /home/townsley/staging && docker-compose up -d --build)
 
   see-if-site-is-back-online:
     needs: spin-up-new-version-of-the-compound
@@ -120,5 +103,5 @@ jobs:
         run: sleep 60s
         shell: bash
       - name: Attempt to connect to personal landing page
-        run: curl --connect-timeout 30 --retry 10 --retry-delay 5 https://townsleycomic.com
+        run: curl --connect-timeout 30 --retry 10 --retry-delay 5 https://staging.townsleycomic.com
         shell: bash
