--- a/.ci/docker-compose.yml
+++ b/.ci/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   app:
     image: ghcr.io/sethangell/townsley_comic:latest
-    container_name: TownsleyComic
+    container_name: ProdTownsleyComic
     environment:
       - DB_NAME
       - DB_USER
