--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   app:
     build:
       context: ./src
-    container_name: TownsleyComic
+    container_name: DevTownsleyComic
     volumes:
       - ./src/:/usr/src/app/
     ports:
