--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ media
 app/db.sqlite3
 *.db
 
+src/project_static/css/tailwind-output.css
+
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
