--- a/.ci/docker-compose.yml
+++ b/.ci/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: ghcr.io/sethangell/townsley_comic:latest
     container_name: ProdTownsleyComic
     volumes:
-      - ./data/townsley.db:/usr/src/app/townsley.db
+      - data:/usr/src/app/data/
     environment:
       - S3_KEY
       - S3_SECRET_KEY
