--- a/src/Dockerfile.prod
+++ b/src/Dockerfile.prod
@@ -17,6 +17,7 @@ ENV USE_S3 1
 ENV S3_KEY: ${S3_KEY}
 ENV S3_SECRET_KEY: ${S3_SECRET_KEY}
 ENV DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
+ENV FNM_INSTALL_VERSION 20
 
 RUN apt-get update \
   && apt-get -y install gcc postgresql libpq-dev vim gunicorn3 curl \
@@ -39,6 +40,9 @@ RUN apt-get update && \
   ln -s /opt/fnm/fnm /usr/bin/ && chmod +x /usr/bin/fnm && \
   # smoke test for fnm
   fnm -V \
+  /bin/bash -c "source /etc/bash.bashrc && fnm install ${FNM_INSTALL_VERSION}" && \
+  /bin/bash -c "source /etc/bash.bashrc && fnm alias default ${FNM_INSTALL_VERSION}" && \
+  /bin/bash -c 'eval "$(fnm env --use-on-cd)"' && \
   /bin/bash -c "source /etc/bash.bashrc && fnm use default" && \
   /bin/bash -c 'source /etc/bash.bashrc && /bin/ln -s "/opt/fnm/aliases/default/bin/node" /usr/bin/node' && \
   /bin/bash -c 'source /etc/bash.bashrc && /bin/ln -s "/opt/fnm/aliases/default/bin/npm" /usr/bin/npm' && \
