--- a/src/Dockerfile.prod
+++ b/src/Dockerfile.prod
@@ -17,6 +17,9 @@ ENV USE_S3 1
 ENV S3_KEY: ${S3_KEY}
 ENV S3_SECRET_KEY: ${S3_SECRET_KEY}
 ENV DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
+ENV FNM_VERSION 1.35.1
+ENV FNM_DIR /opt/fnm
+ENV FNM_INTERACTIVE_CLI false
 ENV FNM_INSTALL_VERSION 20
 
 RUN apt-get update \
