--- a/src/Dockerfile.prod
+++ b/src/Dockerfile.prod
@@ -51,7 +51,9 @@ RUN \
   /bin/bash -c "source /etc/bash.bashrc && fnm use default" && \
   /bin/bash -c 'source /etc/bash.bashrc && /bin/ln -s "/opt/fnm/aliases/default/bin/node" /usr/bin/node' && \
   /bin/bash -c 'source /etc/bash.bashrc && /bin/ln -s "/opt/fnm/aliases/default/bin/npm" /usr/bin/npm' && \
-  /bin/bash -c 'source /etc/bash.bashrc && /bin/ln -s "/opt/fnm/aliases/default/bin/npx" /usr/bin/npx' 
+  /bin/bash -c 'source /etc/bash.bashrc && /bin/ln -s "/opt/fnm/aliases/default/bin/npx" /usr/bin/npx' && \
+  rm /root/.bashrc && \
+  ln -s /etc/bash.bashrc /root/.bashrc && \
 RUN fnm use
 RUN npm install
 RUN npm run build
