--- a/src/Dockerfile.prod
+++ b/src/Dockerfile.prod
@@ -17,6 +17,7 @@ WORKDIR /usr/src/app
 ARG S3_KEY
 ARG S3_SECRET_KEY
 ARG DJANGO_SECRET_KEY
+ARG SEMANTIC_VERSION
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
@@ -24,6 +25,7 @@ ENV DJANGO_DEBUG 0
 ENV ALLOWED_HOSTS townsleycomic.com www.townsleycomic.com 50.116.41.128
 ENV USE_S3 1
 ENV DB_ENGINE django.db.backends.postgresql_psycopg2
+ENV SEMANTIC_VERSION=$SEMANTIC_VERSION
 
 RUN apt-get update \
   && apt-get -y install gcc postgresql libpq-dev vim gunicorn3 \
