fix: make ci actions run sequentially

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -25,6 +25,7 @@ jobs:
   build-and-push-docker-image:
     name: Package and publish a new docker container.
     runs-on: ubuntu-latest
+    needs: generate-semantic-release
 
     steps:
       - name: Checkout Code
