--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -6,8 +6,8 @@ on:
       - main
 
 jobs:
-  generate-semantic-release:
-    name: Publish a new semantic version of this project.
+  build-and-push-docker-image:
+    name: Package and publish a new docker container.
     runs-on: ubuntu-latest
 
     steps:
@@ -17,28 +17,18 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.ADMIN_TOKEN }}
       
-      - name: Python Semantic Release
-        uses: python-semantic-release/python-semantic-release@master
-        with:
-          github_token: ${{ secrets.ADMIN_TOKEN }}
-  
-  build-and-push-docker-image:
-    name: Package and publish a new docker container.
-    runs-on: ubuntu-latest
-    needs: generate-semantic-release
+      - name: Setup Python
+        uses: actions/setup-python@v5
+      
+      - name: Install python-semantic-release
+        run: python3 -m pip install python-semantic-release
+      
 
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.ADMIN_TOKEN }}
-
-      - name: Grab Updated Version
+      - name: Get next semantic version
         run: |
-          SEMVER=$(cat pyproject.toml | grep version\ \= | sed -r 's/^version = "(.*)"$/\1/')
-          echo "SEMANTIC_VERSION=$(echo $SEMVER)" >> $GITHUB_ENV
-          echo $SEMVER && sleep 5
+          next_version=$(semantic-release --noop version --print)
+          echo "SEMANTIC_VERSION=$(echo $next_version)" >> $GITHUB_ENV
+          echo $next_version && sleep 5
 
       - name: Set up Docker Buildx
         id: buildx
@@ -62,6 +52,25 @@ jobs:
             ghcr.io/sethangell/townsley_comic:${{ env.SEMANTIC_VERSION }}
           secrets: |
             SEMANTIC_VERSION=v${{ env.SEMANTIC_VERSION }}
+  
+  generate-semantic-release:
+    name: Publish a new semantic version of this project.
+    runs-on: ubuntu-latest
+    needs: build-and-push-docker-image
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.ADMIN_TOKEN }}
+      
+      - name: Python Semantic Release
+        uses: python-semantic-release/python-semantic-release@master
+        with:
+          github_token: ${{ secrets.ADMIN_TOKEN }}
+  
+ 
 
         
 
