feat: update how version is pulled

--- a/.ci/docker-compose.yml
+++ b/.ci/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - S3_KEY
       - S3_SECRET_KEY
       - DJANGO_SECRET_KEY
+      - SEMANTIC_VERSION
     ports:
       - 8010:8000
     restart: always
