--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -16,7 +16,6 @@ gunicorn==20.0.0
 jmespath==1.0.1
 Markdown==3.3.6
 mock==3.0.5
-Pillow==9.3.0
 psycopg2-binary==2.8.5
 pycparser==2.21
 python-dateutil==2.8.2
@@ -27,3 +26,5 @@ soupsieve==2.4
 sqlparse==0.3.0
 urllib3==1.26.15
 cachetools==5.3.2
+Pillow==10.1.0
+requests==2.31.0
